# masters_dissertation

OLD_VIMRC/: .vimrc
articles/: articles.tex
document/: document.tex
project/: .setup_vim.sh  .vimrc  .vimspector.json  CMakeLists.txt  MSG.txt
project/src/: dynamic_obstacle.h  geom.h  main.cpp  params.h  rrt.h  state.h  static_obstacle.h  visualize.h
